--- a/views/create.ejs
+++ b/views/create.ejs
@@ -9,16 +9,16 @@
     <style>
         body {
             padding: 20px;
-            background-color: #cceedf;
+            background-color: #ffc9ff;
         }
         
         .navbar {
-            background-color: #343a40;
+            background-color: #f04fad;
         }
         
         .navbar-brand,
         .navbar-nav .nav-link {
-            color: #e4e4e4;
+            color: #f1c3ff;
         }
         
         .container {
