--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -10,7 +10,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 20px;
-            background-color: #cceedf;
+            background-color: #f1b6fd;
         }
         
         h1 {
