--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,11 +11,11 @@
         /* Estilos personalizados */
         
         body {
-            background-color: #cceedf;
+            background-color: #e798f1;
         }
         
         .navbar {
-            background-color: #141414;
+            background-color: #810a5d;
         }
         
         .navbar-brand {
@@ -41,7 +41,7 @@
         }
         
         .table th {
-            background-color: #151615;
+            background-color: #57043e;
             color: #fff;
         }
         
